<?xml version="1.0"?>
<package>
  <name>tello_twist_control</name>
  <version>1.0.0</version>
  <description>Generic tello control to write a letter.</description>
  <maintainer email ="example@gmail.com">MT</maintainer>
  <license>free</license>
	


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
